samples/_failures_safe/1761478264_e3c2db_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_beb9e0e5.c: In function ‘main’:
./samples/SAFE/__tmp_beb9e0e5.c:199:9: error: expected expression at end of input
  199 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_beb9e0e5.c:199:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_beb9e0e5.c:199:9: error: expected declaration or statement at end of input
